Spacing Issue

--- a/css/references.css
+++ b/css/references.css
@@ -45,7 +45,7 @@
 .img3 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 750px;
+  top: 725px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -65,7 +65,7 @@
 .img4 {
   background-repeat: no-repeat;
   position: absolute;
-  top: 1100px;
+  top: 1000px;
   opacity: 0.6;
   width: 100%;
   height: 300px;
@@ -74,7 +74,7 @@
 .container4 {
   font-color: black;
   left: 10px;
-  top: 1000px;
+  top: 850px;
 }
 
 
